--- a/models/staging/stripe/_src_stripe.yml
+++ b/models/staging/stripe/_src_stripe.yml
@@ -5,3 +5,12 @@ sources:
     database: dbt-tutorial
     tables:
       - name: payment
+        config:
+          freshness:
+            warn_after:
+              count: 12
+              period: hour
+            error_after:
+              count: 1
+              period: day
+          loaded_at_field: _batched_at
