Added sources and models descriptions

--- a/models/staging/jaffle_shop/_src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/_src_jaffle_shop.yml
@@ -3,17 +3,22 @@ version: 2
 sources:
   - name: jaffle_shop
     database: dbt-tutorial
+    description: A clone of a Postgres application database.
     tables:
       - name: customers
+        description: Raw customers data
         columns:
           - name: id
+            description: Primary key for customers data
             data_tests:
               - unique
               - not_null
               
       - name: orders
+        description: Raw orders data.
         columns:
           - name: id
+            description: Primary key for orders data
             data_tests:
               - unique
               - not_null
